Manejo excepcion MiInformacion.

--- a/webMetics/Views/Participante/EditarParticipante.cshtml
+++ b/webMetics/Views/Participante/EditarParticipante.cshtml
@@ -1,7 +1,7 @@
 ﻿@model webMetics.Models.ParticipanteModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Editar mis datos";
+    ViewBag.Title = "Editar información";
 }
 <!DOCTYPE html>
 <html>
