--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li>
-                                    @Html.ActionLink("Mi usuario", "MiUsuario", "Participante", new { idParticipante = ViewBag.Id }, new { @class = "dropdown-item" })
+                                    @Html.ActionLink("Mi información", "MiInformacion", "Participante", new { idParticipante = ViewBag.Id }, new { @class = "dropdown-item" })
                                 </li>
                                 <li>
                                     @Html.ActionLink("Mi contraseña", "GestionarContrasena", "Usuario", new { idParticipante = ViewBag.Id }, new { @class = "dropdown-item" })
