--- a/webMetics/Views/Calificaciones/ExportarCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/ExportarCalificaciones.cshtml
@@ -19,7 +19,7 @@
             </td>
 
             <td style='border: 1px solid #ccc'>
-                @calificacion.participante.nombre @calificacion.participante.apellido_1 @calificacion.participante.apellido_2
+                @calificacion.participante.nombre @calificacion.participante.primerApellido @calificacion.participante.segundoApellido
             </td>
 
             <td style='border: 1px solid #ccc'>
