--- a/webMetics/Views/Inscripcion/ExportarParticipantes.cshtml
+++ b/webMetics/Views/Inscripcion/ExportarParticipantes.cshtml
@@ -22,7 +22,7 @@
             </td>
 
             <td style='border: 1px solid #ccc'>
-                @participante.nombre @participante.apellido_1 @participante.apellido_2
+                @participante.nombre @participante.primerApellido @participante.segundoApellido
             </td>
 
             <td style='border: 1px solid #ccc'>
