--- a/webMetics/Views/Participante/FormularioUsuario.cshtml
+++ b/webMetics/Views/Participante/FormularioUsuario.cshtml
@@ -38,14 +38,14 @@
                     </div>
                     <div class="row mt-1">
                         <div class="col">
-                            @Html.LabelFor(participanteModel => participanteModel.apellido_1, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.TextBoxFor(participanteModel => participanteModel.apellido_1, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(participanteModel => participanteModel.apellido_1, "", new { @class = "text-danger" })
+                            @Html.LabelFor(participanteModel => participanteModel.primerApellido, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.TextBoxFor(participanteModel => participanteModel.primerApellido, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
+                            @Html.ValidationMessageFor(participanteModel => participanteModel.primerApellido, "", new { @class = "text-danger" })
                         </div>
                         <div class="col">
-                            @Html.LabelFor(participanteModel => participanteModel.apellido_2, new { Style = "font-size:22px" })
-                            @Html.TextBoxFor(participanteModel => participanteModel.apellido_2, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
-                            @Html.ValidationMessageFor(participanteModel => participanteModel.apellido_2, "", new { @class = "text-danger" })
+                            @Html.LabelFor(participanteModel => participanteModel.segundoApellido, new { Style = "font-size:22px" })
+                            @Html.TextBoxFor(participanteModel => participanteModel.segundoApellido, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
+                            @Html.ValidationMessageFor(participanteModel => participanteModel.segundoApellido, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="form-group">
