--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -1,159 +1,158 @@
 ﻿@using webMetics.Controllers
 @{
 
-    ViewBag.Title = "Participantes";
+    ViewBag.Title = "Lista de Participantes";
+
+    var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
 
+@if (ViewBag.Id != "" && ViewBag.Role == 1)
+{
+    <div class="contenedor-tipos-actividades container-fluid">
+        @if (urlReferrer != null)
+        {
+            <div class="d-flex justify-content-start mb-3">
+                <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
+                    <i class="bi bi-arrow-left"></i>
+                </a>
+            </div>
+        }
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<body>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+        <h1>@ViewBag.Title</h1>
+        <hr />
 
-    @if (ViewBag.Id != "" && ViewBag.Role == 1)
-    {
-        <div class="contenedor-tipos-actividades container-fluid">
-            @if (/*Request.UrlReferrer != null*/true)
+        @if (ViewBag.ErrorMessage != null)
+        {
+            <div class="alert alert-dark alert-dismissible fade show mb-4" role="alert">
+                @ViewBag.ErrorMessage
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+        @if (ViewBag.SuccessMessage != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show mb-4" role="alert">
+                @ViewBag.SuccessMessage
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+
+        <div class="table-responsive">
+            @if (ViewBag.ListaParticipantes == null)
             {
-                <a class="bottomNav bi bi-arrow-left" style="color: #5a5a5a; text-decoration: none; " onclick="history.go(-1); return false;" href="#"></a><br />
+                <h5 class="text-center">No hay personas inscritas en ningún módulo.</h5>
             }
-            <h1>@ViewBag.Title</h1>
-            <hr />
-
-            @if (ViewBag.ErrorMessage != null)
+            else
             {
-                <div class="alert alert-dark alert-dismissible fade show mb-4" role="alert">
-                    @ViewBag.ErrorMessage
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            }
-            @if (ViewBag.SuccessMessage != null)
-            {
-                <div class="alert alert-success alert-dismissible fade show mb-4" role="alert">
-                    @ViewBag.SuccessMessage
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            }
-
-            <div class="table-responsive">
-                @if (ViewBag.ListaParticipantes == null)
-                {
-                    <h5 class="text-center">No hay personas inscritas en ningún módulo.</h5>
-                }
-                else
-                {
-                    <div class="d-flex justify-content-between mb-4">
-                        <div>
-                            @using (Html.BeginForm("SubirArchivoExcel", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                            {
-                                @Html.AntiForgeryToken()
-                                <form>
-                                    <div class="mb-3 d-flex">
-                                        <label for="file"></label>
-                                        <input type="file" class="form-control" name="file" id="file">
-                                        <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
-                                    </div>
-                                </form>
-                            }
-                        </div>
-
-                        <div class="d-flex justify-content-end">
-                            <div class="mx-1">
-                                @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Participante", new { }, new { @class = "btn btn-secondary bi bi-download" })
-                            </div>
-                            <div class="mx-1">
-                                @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Participante", new { }, new { @class = "btn btn-secondary bi bi-download" })
-                            </div>
-                            <div class="mx-1">
-                                @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { }, new { @class = "btn btn-secondary bi bi-download" })
-                            </div>
-                            <div class="mx-1">
-                                @Html.ActionLink("   Agregar", "FormularioUsuario", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
-                            </div>
-                        </div>
+                <div class="d-flex justify-content-between mb-4">
+                    <div>
+                        @using (Html.BeginForm("SubirArchivoExcel", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <form>
+                                <div class="mb-3 d-flex">
+                                    <label for="file"></label>
+                                    <input type="file" class="form-control" name="file" id="file">
+                                    <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
+                                </div>
+                            </form>
+                        }
                     </div>
 
-                    <table class="table table-striped" id="tblCustomers">
-                        <thead>
-                            <tr>
-                                <th scope="col">Identificación</th>
-                                <th scope="col">Nombre completo</th>
-                                <th scope="col">Condición</th>
-                                <th scope="col">Unidad académica</th>
-                                <th scope="col">Correo institucional</th>
-                                <th scope="col">Teléfono</th>
-                                <th scope="col" style="width:5%;"></th>
-                                <th scope="col" style="width:5%;"></th>
-                                <th scope="col" style="width:5%;"></th>
-                            </tr>
-                        </thead>
-
-                        <tbody>
-                            @foreach (var participante in ViewBag.ListaParticipantes)
-                            {
-                                var gruposInscritos = participante.gruposInscritos;
-                                var nombreCompleto = participante.nombre;
-                                nombreCompleto += " " + participante.apellido_1;
-                                if (participante.apellido_2 != "-")
-                                {
-                                    nombreCompleto += " " + participante.apellido_2;
-                                }
-                                <tr>
-                                    <td>@participante.idParticipante</td>
-                                    <td>@nombreCompleto</td>
-                                    <td>@participante.condicion</td>
-                                    <td>@participante.unidadAcademica</td>
-                                    <td>@participante.correo</td>
-                                    <td>@participante.telefonos</td>
-                                    <td>
-                                        @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-primary bi bi-search" })
-                                    </td>
-                                    <td>
-                                        @Html.ActionLink(" ", "EditarParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-outline-secondary bi bi-pencil-square" })
-                                    </td>
-                                    <td>
-                                        <i class="btn btn-outline-danger bi bi-trash" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModalEliminar('@participante.idParticipante')"></i>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                }
-                <div class="d-flex justify-content-center">
-                    <a href="../Grupo/ListaGruposDisponibles" class="btn btn-primary">Regresar</a>
-                </div>
-            </div>
-        </div>
-    }
-
-    <div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Eliminar participante</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    ¿Está seguro de que desea eliminar este participante?
-
-                    @using (Html.BeginForm("EliminarParticipante", "Participante"))
-                    {
-                        @Html.AntiForgeryToken()
-
-                        <div class="modal-footer">
-                            <input type="hidden" id="idParticipante" name="idParticipante">
-                            <input type="submit" class="btn btn-primary" value="Aceptar" onclick="" />
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-
+                    <div class="d-flex justify-content-end">
+                        <div class="mx-1">
+                            @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Participante", new { }, new { @class = "btn btn-secondary bi bi-download" })
                         </div>
-                    }
+                        <div class="mx-1">
+                            @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Participante", new { }, new { @class = "btn btn-secondary bi bi-download" })
+                        </div>
+                        <div class="mx-1">
+                            @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { }, new { @class = "btn btn-secondary bi bi-download" })
+                        </div>
+                        <div class="mx-1">
+                            @Html.ActionLink("   Agregar", "FormularioUsuario", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
+                        </div>
+                    </div>
                 </div>
+
+                <table class="table table-striped" id="tblCustomers">
+                    <thead>
+                        <tr>
+                            <th scope="col">Identificación</th>
+                            <th scope="col">Nombre completo</th>
+                            <th scope="col">Condición</th>
+                            <th scope="col">Unidad académica</th>
+                            <th scope="col">Correo institucional</th>
+                            <th scope="col" style="width:10%;">Teléfono</th>
+                            <th scope="col" style="width:3.33%;"></th>
+                            <th scope="col" style="width:3.33%;"></th>
+                            <th scope="col" style="width:3.33%;"></th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        @foreach (var participante in ViewBag.ListaParticipantes)
+                        {
+                            var gruposInscritos = participante.gruposInscritos;
+                            var nombreCompleto = participante.nombre;
+                            nombreCompleto += " " + participante.primerApellido;
+                            if (participante.segundoApellido != "-")
+                            {
+                                nombreCompleto += " " + participante.segundoApellido;
+                            }
+                            <tr>
+                                <td>@participante.idParticipante</td>
+                                <td>@nombreCompleto</td>
+                                <td>@participante.condicion</td>
+                                <td>@participante.unidadAcademica</td>
+                                <td>@participante.correo</td>
+                                <td>@participante.telefonos</td>
+                                <td>
+                                    @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "text-secondary bi bi-search" })
+                                </td>
+                                <td>
+                                    @Html.ActionLink(" ", "EditarParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "text-secondary bi bi-pencil-square" })
+                                </td>
+                                <td>
+                                    <a href="#" class="text-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModalEliminar('@participante.idParticipante')">
+                                        <i class="bi bi-trash"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
+            <div class="d-flex justify-content-center">
+                <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
             </div>
         </div>
     </div>
-</body>
-</html>
+}
+
+<div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Eliminar participante</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ¿Está seguro de que desea eliminar este participante?
+
+                @using (Html.BeginForm("EliminarParticipante", "Participante"))
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="modal-footer">
+                        <input type="hidden" id="idParticipante" name="idParticipante">
+                        <input type="submit" class="btn btn-danger" value="Aceptar" onclick="" />
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
 
 <script type="text/javascript">
     function actualizarModalEliminar(idParticipante) {
